# Sudoku

./: CMakeLists.txt  LICENSE
include/: sudoku.h
src/: main.cpp  sudoku.cpp
